# Workflow

./: .buildinfo  .gitattributes  .gitmodules  CHANGELOG.md  FAQ.html  LICENSE  Makefile  README.md  about.html  auto_keys_main.html  autosubmit_cheatsheet.html  create_run.html  genindex.html  getting_started.html  index.html  keys_main.html  keys_request.html  main_example.yml  minimal_example.yml  objects.inv  operators_guide.html  pyproject.toml  pytest.ini  request_example.yml  search.html  searchindex.js  setup.py  technicalities.html  update_apps.html
DUMMY/: README
_sources/: about.rst.txt  auto_keys_main.rst.txt  autosubmit_cheatsheet.rst.txt  create_run.rst.txt  getting_started.rst.txt  index.rst.txt  keys_request.rst.txt
_static/: documentation_options.js
conf/: create_jobs_from_mother_request.py  general.yml  gsv.yml  jobs.yml  jobs_apps.yml  jobs_end-to-end.yml  jobs_maestro-apps.yml  jobs_maestro-end-to-end.yml  jobs_model.yml  jobs_simless.yml  jobs_template.yml_tmp  mother_request.yml  platforms.yml
docs/: requirements.txt
lib/: LUMI-TRANSFER
mains/: ifs-fesom-hist-tco79.yml  main_example_app.yml  main_example_end_to_end.yml  main_example_model_icon.yml  main_example_model_ifs-nemo.yml  main_example_model_nemo.ymlnotworking  main_example_simless.yml
requests/: request_example_app.yml  request_example_end_to_end.yml  request_example_historical.yml  request_example_projection.yml
schemas/: app.html  aqua.html  configuration.html  experiment.html  gsv.html  jobs.html  model_icon.html  model_ifs.html  platforms.html  request.html  run.html
templates/: README.md  application.sh  backup.sh  clean.sh  dn.sh  dqc.sh  dummy.sh  gsv.sh  ini.sh  local_setup.sh  main_example.yml  mhm.nml.yml  mstro_librarian.sh  mstro_opa.sh  mstro_pm.sh  only_lra.yaml  opa.sh  postproc_app.sh  remote_setup.sh  sim_icon.sh  sim_ifs-fesom.sh  sim_ifs-nemo.sh  sim_nemo.sh  synchronize.sh  transfer.sh  (+2 more)
(+369 files in other folders)
